--- a/nQA.Web/packages.config
+++ b/nQA.Web/packages.config
@@ -1,5 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CodeContracts.Unofficial" version="1.0.0.2" targetFramework="net40" />
+  <package id="DotNetOpenAuth.Core" version="4.1.0.12182" targetFramework="net40" />
+  <package id="DotNetOpenAuth.OpenId.Core" version="4.1.0.12182" targetFramework="net40" />
+  <package id="DotNetOpenAuth.OpenId.RelyingParty" version="4.1.0.12182" targetFramework="net40" />
   <package id="jQuery" version="1.6.2" targetFramework="net40" />
   <package id="jQuery.UI.Combined" version="1.8.11" targetFramework="net40" />
   <package id="jQuery.Validation" version="1.8.1" targetFramework="net40" />
