--- a/nQA.Web/packages.config
+++ b/nQA.Web/packages.config
@@ -4,6 +4,7 @@
   <package id="DotNetOpenAuth.Core" version="4.1.0.12182" targetFramework="net40" />
   <package id="DotNetOpenAuth.OpenId.Core" version="4.1.0.12182" targetFramework="net40" />
   <package id="DotNetOpenAuth.OpenId.RelyingParty" version="4.1.0.12182" targetFramework="net40" />
+  <package id="EntityFramework" version="5.0.0" targetFramework="net45" />
   <package id="jQuery" version="1.8.0" targetFramework="net40" />
   <package id="jQuery.UI.Combined" version="1.8.23" targetFramework="net40" />
   <package id="jQuery.Validation" version="1.9.0.1" targetFramework="net40" />
