--- a/nQA.Web/packages.config
+++ b/nQA.Web/packages.config
@@ -22,5 +22,6 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net40" />
   <package id="Modernizr" version="2.5.3" targetFramework="net40" />
   <package id="Newtonsoft.Json" version="4.5.8" targetFramework="net40" />
+  <package id="Ninject" version="3.0.1.10" targetFramework="net45" />
   <package id="WebGrease" version="1.1.0" targetFramework="net40" />
 </packages>
