Added Unit Test project for web project; Added reference to Nunit and NSubstitute

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -2,4 +2,5 @@
 <repositories>
   <repository path="..\nQA.Model\packages.config" />
   <repository path="..\nQA.Web\packages.config" />
+  <repository path="..\Tests\nQA.Web.Tests\packages.config" />
 </repositories>
