--- a/Tests/nQA.Web.Tests/packages.config
+++ b/Tests/nQA.Web.Tests/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="DotNetOpenAuth.Core" version="4.1.4.12333" targetFramework="net45" />
+  <package id="DotNetOpenAuth.OpenId.Core" version="4.1.4.12333" targetFramework="net45" />
+  <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net45" />
   <package id="NSubstitute" version="1.4.3.0" targetFramework="net45" />
   <package id="NUnit" version="2.6.2" targetFramework="net45" />
 </packages>
