--- a/nQA.Model/nQA.Model.csproj
+++ b/nQA.Model/nQA.Model.csproj
@@ -44,6 +44,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Entities\User.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="Interfaces\IRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\GenericRepository.cs" />
