--- a/nQA.Model/nQA.Model.csproj
+++ b/nQA.Model/nQA.Model.csproj
@@ -48,13 +48,18 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Interfaces\IRepository.cs" />
+    <Compile Include="Interfaces\IUserService.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\GenericRepository.cs" />
+    <Compile Include="Services\UserService.cs">
+      <SubType>Code</SubType>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Entities\Mappings\" />
     <Folder Include="Queries\" />
-    <Folder Include="Services\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
