--- a/nQA.Web/Web.config
+++ b/nQA.Web/Web.config
@@ -36,7 +36,7 @@
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
     <authentication mode="Forms">
-      <forms loginUrl="~/Account/Login" timeout="2880" />
+      <forms loginUrl="~/Account/Login" timeout="2880" defaultUrl="/" />
     </authentication>
     <pages controlRenderingCompatibilityVersion="4.0">
       <namespaces>
