Added database context

--- a/nQA.Model/nQA.Model.csproj
+++ b/nQA.Model/nQA.Model.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DatabaseContext.cs" />
     <Compile Include="Entities\User.cs">
       <SubType>Code</SubType>
     </Compile>
