--- a/nQA.Web/Web.config
+++ b/nQA.Web/Web.config
@@ -15,7 +15,7 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=aspnet-nQA.Web-20120802075820;Integrated Security=SSPI" />
+    <add name="nQADatabase" providerName="System.Data.SqlClient" connectionString="Server=.\dev;Database=nQA;Trusted_Connection=True;" />
   </connectionStrings>
   <appSettings>
     <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
